--- a/layouts/partials/footer_container.html
+++ b/layouts/partials/footer_container.html
@@ -19,6 +19,9 @@
         <a class="btn btn-outline-primary my-1 js-copy-cite" href="#" target="_blank">
           <i class="fas fa-copy"></i> {{ i18n "btn_copy" }}
         </a>
+        <a class="btn btn-outline-primary my-1 js-download-cite" href="#" target="_blank">
+          <i class="fas fa-download"></i> {{ i18n "btn_download" }}
+        </a>
         <div id="modal-error"></div>
       </div>
     </div>
