--- a/layouts/partials/widgets/experience.html
+++ b/layouts/partials/widgets/experience.html
@@ -5,7 +5,7 @@
 <div class="row">
   <div class="col-12 col-lg-4 section-heading">
     <h2>{{ with $page.Title }}{{ . | markdownify }}{{ end }}</h2>
-    {{ with $page.Params.subtitle }}<p>{{ . | markdownify }}</p>{{ end }}
+    {{ with $page.Params.subtitle }}{{ end }}
   </div>
   <div class="col-12 col-lg-8">
     {{ with $page.Content }}{{ end }}
