--- a/layouts/partials/widgets/experience.html
+++ b/layouts/partials/widgets/experience.html
@@ -5,7 +5,7 @@
 <div class="row">
   <div class="col-12 col-lg-4 section-heading">
     <h2>{{ with $page.Title }}{{ . | markdownify }}{{ end }}</h2>
-    {{ with $page.Params.subtitle }}{{ end }}
+    {{ with $page.Params.subtitle }}<p>{{ . | markdownify }}</p>{{ end }}
   </div>
   <div class="col-12 col-lg-8">
     {{ with $page.Content }}{{ end }}
@@ -29,7 +29,6 @@
         </div>
       </div>
       <!-- Content -->
-      <div class="col py-2">
         <div class="card">
           <div class="card-body">
             <div class="float-right text-muted exp-meta">
@@ -53,7 +52,6 @@
           </div>
         </div>
       </div>
-    </div>
     {{end}}
     {{end}}
   </div>
