--- a/layouts/partials/widgets/experience.html
+++ b/layouts/partials/widgets/experience.html
@@ -29,6 +29,7 @@
         </div>
       </div>
       <!-- Content -->
+       <div class="col py-2">
         <div class="card">
           <div class="card-body">
             <div class="float-right text-muted exp-meta">
@@ -52,6 +53,7 @@
           </div>
         </div>
       </div>
+    </div>
     {{end}}
     {{end}}
   </div>
